--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "scripts": {
+    "test": "npm run htmlhint && npm run prettier:write",
     "htmlhint": "npx htmlhint '**/*.html'",
     "prettier:check": "npx prettier --check .",
     "prettier:write": "npx prettier --write .",
     "stylelint": "npx stylelint \"**/*.css\"",
-    "eslint": "npx eslint \"**/*.js\""
+    "eslint": "npx eslint \"**/*.js\"",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "eslint": "^8.12.0",
     "htmlhint": "^1.1.3",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.7",
     "prettier": "^2.6.2",
     "stylelint": "^14.6.1",
     "stylelint-config-prettier": "^9.0.3",
